--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,9 +1,5 @@
-
 version: "2.0"
 rules:
-## 
-# Fallback
-#
 - rule: Ask the user to rephrase whenever they send a message with low NLU confidence
   steps:
   - intent: nlu_fallback
@@ -22,44 +18,26 @@ rules:
   steps:
   - intent: confirm
   - action: utter_question_start
-#
-#
-#
-- rule: User asks how it works 
+- rule: User asks how it works
   steps:
   - intent: how_it_works
-  - action: handover
-#
-# Payment Responses
-#
+  - action: utter_handover
 - rule: Payment Info
   steps:
   - intent: payment_info
   - action: utter_payment_info
-#
-#
-#
 - rule: Say payment ammount
   steps:
   - intent: payment_amount_info
   - action: utter_payment_ammount_info
-#
-#
-#
 - rule: Say payment Date
   steps:
   - intent: payment_date_info
   - action: utter_payment_date_info
-#
-#
-#
 - rule: Say payment Done
   steps:
   - intent: payment_done
   - action: utter_payment_done
-#
-# Payment was set
-#
 - rule: Say payment ammount
   condition:
   - slot_was_set:
@@ -74,73 +52,7 @@ rules:
   steps:
   - intent: payment_date_info
   - action: utter_payment_date_info
-#
-# Handover to Agent
-#
 - rule: Handover
   steps:
   - intent: handover
   - action: utter_handover
-##
-##
-## Forms Submit
-##
-##
-# - rule: Submit form payment accept
-#   condition:
-#   - active_loop: payment_form
-#   steps:
-#   - action: payment_form
-#   - active_loop: null
-#   - slot_was_set:
-#     - requested_slot: null
-#   - action: action_new_policy_message
-# - rule: Submit form payment reject
-#   condition:
-#   - active_loop: reject_payment_form
-#   steps:
-#   - action: reject_payment_form
-#   - active_loop: null
-#   - slot_was_set:
-#     - requested_slot: null
-#   - action: utter_payment_reject
-# ##
-# ##
-# ## Forms Init
-# ##
-# ##
-# - rule: Start form payment accept
-#   condition:
-#   - slot_was_set:
-#     - accept_payment: null
-#   steps:
-#   - intent: confirm
-#   - action: handover
-#   - action: payment_form
-#   - active_loop: payment_form
-# - rule: Start form payment accept
-#   condition:
-#   - slot_was_set:
-#     - accept_payment: null
-#   steps:
-#   - intent: payment_done
-#   - action: utter_payment_accept
-#   - action: payment_form
-#   - active_loop: payment_form
-
-# - rule: Start form payment reject
-#   condition:
-#   - slot_was_set:
-#     - accept_payment: null
-#   steps:
-#   - intent: deny
-#   - action: reject_payment_form
-#   - active_loop: reject_payment_form
-# - rule: Start form payment reject
-#   condition:
-#   - slot_was_set:
-#     - accept_payment: null
-#   steps:
-#   - intent: payment_deny
-#   - action: reject_payment_form
-#   - active_loop: reject_payment_form
