--- a/domain.yml
+++ b/domain.yml
@@ -1,59 +1,87 @@
-
+version: '2.0'
+config:
+  store_entities_as_slots: true
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
-#Intent
 intents:
-- greet
-- goodbye
-- inform
-- confirm
-- deny
-- cost
-- bot_challenge
-#
-# Question Handler
-#
-- wrong_input
-- repeat_question
-#
-# Customer Intents
-#
-- how_it_works
-#
-# Payment to Client
-#
-- payment_date_info
-- payment_amount_info
-- payment_info
-- partial_payment
+- greet:
+    use_entities: true
+- goodbye:
+    use_entities: true
+- inform:
+    use_entities: true
+- confirm:
+    use_entities: true
+- deny:
+    use_entities: true
+- cost:
+    use_entities: true
+- bot_challenge:
+    use_entities: true
+- wrong_input:
+    use_entities: true
+- repeat_question:
+    use_entities: true
+- how_it_works:
+    use_entities: true
+- payment_date_info:
+    use_entities: true
+- payment_amount_info:
+    use_entities: true
+- payment_info:
+    use_entities: true
+- partial_payment:
+    use_entities: true
+- payment_done:
+    use_entities: true
+- handover:
+    use_entities: true
+- nlu_fallback:
+    use_entities: true
+- payment_deny:
+    use_entities: true
 entities:
 - city
 - sex
 - name
 - time
 - bots
+- payment_reason
 slots:
-  # Data to query from customer
   name:
-    type: text
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
     influence_conversation: false
   sex:
-    type: text
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
     influence_conversation: true
   payment_date:
-    type: text
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
     influence_conversation: false
   agent_name:
-    type: text
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
     influence_conversation: false
   payment_amount:
-    type: text
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: true
+  accept_payment:
+    type: rasa.shared.core.slots.UnfeaturizedSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: false
 responses:
   utter_greet:
-  - text: Muy bien Estimado {name}, Cimaco le ofrece un Beneficio para poner al corriente su cuenta, 
-          su credito es muy importante para nosotros por lo que le solicitamos el pago de su saldo vencido
-          lo antes posible. Requiere más información del beneficio?
+  - text: Muy bien Estimado {name}, Cimaco le ofrece un Beneficio para poner al corriente su cuenta, su credito es muy importante para nosotros por lo que le solicitamos el pago de su saldo vencido lo antes posible. Requiere más información del beneficio?
   utter_goodbye:
   - custom:
       status: end_conversation
@@ -63,21 +91,17 @@ responses:
   utter_repeat:
   - text: Claro que sí la pregunta fue.
   utter_sms:
-  - text: Para su comodidad, le enviaré por mensaje para que conozca a detalle los
-      beneficios de las opciones que tenemos para ud. así como las formas de pago.
+  - text: Para su comodidad, le enviaré por mensaje para que conozca a detalle los beneficios de las opciones que tenemos para ud. así como las formas de pago.
   utter_happy:
   - text: Muy bien, tambien.
-
-
-# Payment Responses
   utter_how_it_works:
-  - text: Consiste en el descuento de un porcentaje de interes moratorio. Quisera hablar con un agente? 
+  - text: Consiste en el descuento de un porcentaje de interes moratorio. Quisera hablar con un agente?
   utter_costs:
   - custom:
       status: handover
-    text: En estos lo comunicaremos con un agente para resolver estas dudas.
+    text: En estos momento lo comunicaremos con un agente para resolver estas dudas. Gracias
   utter_payment_info:
-  - text: El pago se puedre realizar en cuanquier tienda Cimaco, en www.cimaco.com o en bancos. Cual es alguna otra duda que le puedo resolver?
+  - text: El pago se puede realizar en cualquiera de las tiendas de Cimaco, en www.cimaco.com o en bancos. Tiene alguna otra duda que le pueda resolver?
   utter_payment_ammount_info:
   - custom:
       status: handover
@@ -87,18 +111,16 @@ responses:
   utter_payment_partial:
   - text: Si es posible dar un pago parcial, pero el beneficio aplica hasta que el saldo vencido se liquide completamente.
   utter_payment_done:
-    - text: Muchas gracias por su pago y disculpa las molestias.
+  - text: Muchas gracias por su pago y disculpa las molestias.
   utter_submit:
   - custom:
-      status: handover
       payment: success
+      status: handover
     text: Pefecto es esto momento lo comunicaremos con un agente.
-## Agent Handover
   utter_handover:
   - custom:
       status: handover
     text: En unos momentos te comunicaremos con un agente para atenderle.
-## Other questions
   utter_question:
   - text: Tiene alguna otra con la que lo pueda ayudar?
   utter_question_start:
@@ -107,5 +129,5 @@ actions:
 - action_slot_reset
 - action_slot_query
 - action_session_start
-
- 
+forms: {}
+e2e_actions: []
